tests/tests/ui/key_mixed_simple_then_named.stderr
error: cannot mix field names with `partition`/`local` syntax
 --> tests/ui/key_mixed_simple_then_named.rs:2:11
  |
2 | #[key(id, partition = name)]
  |           ^^^^^^^^^
