tests/tests/ui/key_mixed_simple_then_named.rs
#[derive(toasty::Model)]
#[key(id, partition = name)]
struct Widget {
    id: uuid::Uuid,
    name: String,
}

fn main() {}
